tests/ui/compile_fail/other_type_annotation.stderr
error[E0308]: mismatched types
 --> tests/ui/compile_fail/other_type_annotation.rs:7:24
  |
7 |     let c = a.coalesce(b);
  |               -------- ^ expected `Annotated<Option<{integer}>, &str>`, found `Annotated<Option<{integer}>, String>`
  |               |
  |               arguments to this method are incorrect
  |
  = note: expected struct `Annotated<Option<{integer}>, &str>`
             found struct `Annotated<Option<{integer}>, String>`
help: the return type of this call is `Annotated<Option<{integer}>, String>` due to the type of the argument passed
 --> tests/ui/compile_fail/other_type_annotation.rs:7:13
  |
7 |     let c = a.coalesce(b);
  |             ^^^^^^^^^^^-^
  |                        |
  |                        this argument influences the return type of `coalesce`
note: method defined here
 --> coalesced_base/src/op/annotation/coalesce.rs
  |
  | #[derive(Debug, Clone, Copy, PartialEq, Eq, PartialOrd, Ord, Default, Hash, ConstructionUse)]
  |                                                                             ^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `ConstructionUse` (in Nightly builds, run with -Z macro-backtrace for more info)
